# aws_mouse_ros2

./: README.md  faq.md  loc.sh  loc2.sh  loc3.sh  robomaker.sh  saveconfig.sh  setup_ros2.sh  setup_ros2_jammy.sh
awsmouse/: package.xml  setup.cfg  setup.py
awsmouse/awsmouse/: mazedemo.py  mazedemo.py_bak  runner_template.py
awsmouse/awsmouse/mouse_common/: utils.py
img_recognition/: CMakeLists.txt  package.xml  setup.cfg  setup.py
img_recognition/img_recognition/: save_image.py  train_model.py
img_recognition/launch/: inference.launch
img_recognition_resources/: CMakeLists.txt  package.xml
img_recognition_resources/img_recognition/: infer.launch.py  inference_to_reaction.py  pretrainedmodel.py  rmdir.py  train_model.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/awsmouse/share/awsmouse/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/img_recognition/share/img_recognition/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/img_recognition_resources/share/img_recognition_resources/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/img_recognition_resources/share/img_recognition_resources/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_img_recognition_resources__rosidl_generator_cExport-noconfig.cmake  export_img_recognition_resources__rosidl_generator_cExport.cmake  export_img_recognition_resources__rosidl_generator_cppExport.cmake  export_img_recognition_resources__rosidl_generator_pyExport-noconfig.cmake  export_img_recognition_resources__rosidl_generator_pyExport.cmake  export_img_recognition_resources__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_img_recognition_resources__rosidl_typesupport_fastrtps_cExport.cmake  export_img_recognition_resources__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_img_recognition_resources__rosidl_typesupport_fastrtps_cppExport.cmake  img_recognition_resourcesConfig.cmake  img_recognition_resources__rosidl_typesupport_cExport-noconfig.cmake  img_recognition_resources__rosidl_typesupport_cExport.cmake  img_recognition_resources__rosidl_typesupport_cppExport-noconfig.cmake  img_recognition_resources__rosidl_typesupport_cppExport.cmake  img_recognition_resources__rosidl_typesupport_introspection_cExport-noconfig.cmake  img_recognition_resources__rosidl_typesupport_introspection_cExport.cmake  img_recognition_resources__rosidl_typesupport_introspection_cppExport-noconfig.cmake  img_recognition_resources__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/img_recognition_resources/share/img_recognition_resources/msg/: Inference.idl  Prediction.idl
install/img_recognition_resources/share/img_recognition_resources/srv/: PictureInterval.idl  SaveAction.idl  SelectLabel.idl
install/jetbot_description/share/jetbot_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/jetbot_description/share/jetbot_description/launch/: display.launch  gazebo.launch
install/maze_demo/share/maze_demo/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/maze_world/share/maze_world/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/pid_tune/share/pid_tune/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/pid_tune/share/pid_tune/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_pid_tune__rosidl_generator_cExport-noconfig.cmake  export_pid_tune__rosidl_generator_cExport.cmake  export_pid_tune__rosidl_generator_cppExport.cmake  export_pid_tune__rosidl_generator_pyExport-noconfig.cmake  export_pid_tune__rosidl_generator_pyExport.cmake  export_pid_tune__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_pid_tune__rosidl_typesupport_fastrtps_cExport.cmake  export_pid_tune__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_pid_tune__rosidl_typesupport_fastrtps_cppExport.cmake  pid_tuneConfig.cmake  pid_tune__rosidl_typesupport_cExport-noconfig.cmake  pid_tune__rosidl_typesupport_cExport.cmake  pid_tune__rosidl_typesupport_cppExport-noconfig.cmake  pid_tune__rosidl_typesupport_cppExport.cmake  pid_tune__rosidl_typesupport_introspection_cExport-noconfig.cmake  pid_tune__rosidl_typesupport_introspection_cExport.cmake  pid_tune__rosidl_typesupport_introspection_cppExport-noconfig.cmake  rosidl_cmake-extras.cmake  (+3 more)
jetbot_description/: package.xml  setup.cfg  setup.py
jetbot_description/jetbot_description/: runforward.py  runforward.py.bak
jetbot_description/launch/: display.launch  gazebo.launch  jetbot_description.launch  simple_nagivation.launch  spawn.launch
log/: latest_build
maze_demo/: package.xml  setup.cfg  setup.py
maze_demo/launch/: explore_world.launch
maze_demo/maze_demo/: maze_runner.py  test_runner.py
maze_world/: package.xml  setup.cfg  setup.py
maze_world/launch/: world.launch
maze_world/models/smallnumber3/: model.config
maze_world/world/: jetbotSize.world
mouse_common/: utils.py
pid_tune/: CMakeLists.txt  package.xml
pid_tune/msg/: PidTune.msg
pyamaze/: aStarDemo.py
rospy_message_converter/mouse_common/: utils.py
rospy_message_converter/pyamaze/: aStarDemo.py
src/img_recognition/script/: mkdir.py  save_image.py  srv_client_save_image.py
src/img_recognition/src/: custommodel.py  inference_model.py
src/maze_demo/: CMakeLists.txt  package.xml  setup.py
src/maze_demo/scripts/: test_runner.py
src/maze_demo/src/mouse_common/: utils.py
src/maze_demo/src/pyamaze/: pyamaze.py
(+104 files in other folders)
