<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>img_recognition</name>
  <version>0.0.1</version>
  <description>Resources for img_recognition</description>
  <maintainer email="richard.sand0001@temple.edu">rsand</maintainer>
  <license>Apache2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>img_recognition_resources</exec_depend>
  <depend>Inference</depend>
  <depend>Prediction</depend>
</package>
